--- a/apps/base/monitoring-prometheus-operator/deploy/rules/kube-prometheus/kubernetes.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/rules/kube-prometheus/kubernetes.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   labels:
+    app.kubernetes.io/component: kubernetes
     app.kubernetes.io/name: kube-prometheus
     app.kubernetes.io/part-of: kube-prometheus
     prometheus: k8s
@@ -121,13 +122,13 @@ spec:
               unless
             kube_statefulset_status_update_revision{job="kube-state-metrics"}
           )
-            *
+            * on(namespace, statefulset, job, cluster)
           (
             kube_statefulset_replicas{job="kube-state-metrics"}
               !=
             kube_statefulset_status_replicas_updated{job="kube-state-metrics"}
           )
-        )  and (
+        )  and on(namespace, statefulset, job, cluster) (
           changes(kube_statefulset_status_replicas_updated{job="kube-state-metrics"}[5m])
             ==
           0
@@ -254,11 +255,26 @@ spec:
       for: 15m
       labels:
         severity: warning
+    - alert: KubePdbNotEnoughHealthyPods
+      annotations:
+        description: PDB {{ $labels.cluster }}/{{ $labels.namespace }}/{{ $labels.poddisruptionbudget }} expects {{ $value }} more healthy pods. The desired number of healthy pods has not been met for at least 15m.
+        runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubepdbnotenoughhealthypods
+        summary: PDB does not have enough healthy pods.
+      expr: |
+        (
+          kube_poddisruptionbudget_status_desired_healthy{job="kube-state-metrics"}
+          -
+          kube_poddisruptionbudget_status_current_healthy{job="kube-state-metrics"}
+        )
+        > 0
+      for: 15m
+      labels:
+        severity: warning
   - name: kubernetes-resources
     rules:
     - alert: KubeCPUOvercommit
       annotations:
-        description: Cluster {{ $labels.cluster }} has overcommitted CPU resource requests for Pods by {{ $value }} CPU shares and cannot tolerate node failure.
+        description: Cluster {{ $labels.cluster }} has overcommitted CPU resource requests for Pods by {{ printf "%.2f" $value }} CPU shares and cannot tolerate node failure.
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubecpuovercommit
         summary: Cluster has overcommitted CPU resource requests.
       expr: |
@@ -295,7 +311,7 @@ spec:
         severity: warning
     - alert: KubeMemoryQuotaOvercommit
       annotations:
-        description: Cluster {{ $labels.cluster }}  has overcommitted memory resource requests for Namespaces.
+        description: Cluster {{ $labels.cluster }} has overcommitted memory resource requests for Namespaces.
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubememoryquotaovercommit
         summary: Cluster has overcommitted memory resource requests.
       expr: |
@@ -1363,9 +1379,26 @@ spec:
             label_replace(
               kube_pod_owner{job="kube-state-metrics", owner_kind="ReplicaSet"},
               "replicaset", "$1", "owner_name", "(.*)"
-            ) * on(replicaset, namespace) group_left(owner_name) topk by(replicaset, namespace) (
-              1, max by (replicaset, namespace, owner_name) (
-                kube_replicaset_owner{job="kube-state-metrics"}
+            ) * on (cluster, replicaset, namespace) group_left(owner_name) topk by(cluster, replicaset, namespace) (
+              1, max by (cluster, replicaset, namespace, owner_name) (
+                kube_replicaset_owner{job="kube-state-metrics", owner_kind=""}
+              )
+            ),
+            "workload", "$1", "replicaset", "(.*)"
+          )
+        )
+      labels:
+        workload_type: replicaset
+      record: namespace_workload_pod:kube_pod_owner:relabel
+    - expr: |
+        max by (cluster, namespace, workload, pod) (
+          label_replace(
+            label_replace(
+              kube_pod_owner{job="kube-state-metrics", owner_kind="ReplicaSet"},
+              "replicaset", "$1", "owner_name", "(.*)"
+            ) * on(replicaset, namespace, cluster) group_left(owner_name) topk by(cluster, replicaset, namespace) (
+              1, max by (cluster, replicaset, namespace, owner_name) (
+                kube_replicaset_owner{job="kube-state-metrics", owner_kind="Deployment"}
               )
             ),
             "workload", "$1", "owner_name", "(.*)"
@@ -1388,21 +1421,47 @@ spec:
         max by (cluster, namespace, workload, pod) (
           label_replace(
             kube_pod_owner{job="kube-state-metrics", owner_kind="StatefulSet"},
-            "workload", "$1", "owner_name", "(.*)"
-          )
+          "workload", "$1", "owner_name", "(.*)")
         )
       labels:
         workload_type: statefulset
       record: namespace_workload_pod:kube_pod_owner:relabel
     - expr: |
-        max by (cluster, namespace, workload, pod) (
-          label_replace(
-            kube_pod_owner{job="kube-state-metrics", owner_kind="Job"},
-            "workload", "$1", "owner_name", "(.*)"
-          )
+        group by (cluster, namespace, workload, pod) (
+          label_join(
+            group by (cluster, namespace, job_name, pod, owner_name) (
+              label_join(
+                kube_pod_owner{job="kube-state-metrics", owner_kind="Job"}
+              , "job_name", "", "owner_name")
+            )
+            * on (cluster, namespace, job_name) group_left()
+            group by (cluster, namespace, job_name) (
+              kube_job_owner{job="kube-state-metrics", owner_kind=~"Pod|"}
+            )
+          , "workload", "", "owner_name")
         )
       labels:
         workload_type: job
+      record: namespace_workload_pod:kube_pod_owner:relabel
+    - expr: |
+        max by (cluster, namespace, workload, pod) (
+          label_replace(
+            kube_pod_owner{job="kube-state-metrics", owner_kind="", owner_name=""},
+          "workload", "$1", "pod", "(.+)")
+        )
+      labels:
+        workload_type: barepod
+      record: namespace_workload_pod:kube_pod_owner:relabel
+    - expr: |
+        max by (cluster, namespace, workload, pod) (
+          label_replace(
+            kube_pod_owner{job="kube-state-metrics", owner_kind="Node"},
+          "workload", "$1", "pod", "(.+)")
+        )
+      labels:
+        workload_type: staticpod
+      record: namespace_workload_pod:kube_pod_owner:relabel
+    - expr: "group by (cluster, namespace, workload, workload_type, pod) (\n  label_join(\n    label_join(\n      group by (cluster, namespace, job_name, pod) (\n        label_join(\n          kube_pod_owner{job=\"kube-state-metrics\", owner_kind=\"Job\"}\n        , \"job_name\", \"\", \"owner_name\")\n      )\n      * on (cluster, namespace, job_name) group_left(owner_kind, owner_name)\n      group by (cluster, namespace, job_name, owner_kind, owner_name) (\n        kube_job_owner{job=\"kube-state-metrics\", owner_kind!=\"Pod\", owner_kind!=\"\"}\n      )\n    , \"workload\", \"\", \"owner_name\")\n  , \"workload_type\", \"\", \"owner_kind\")\n  \n  OR\n\n  label_replace(\n    label_replace(\n      label_replace(\n        kube_pod_owner{job=\"kube-state-metrics\", owner_kind=\"ReplicaSet\"}\n        , \"replicaset\", \"$1\", \"owner_name\", \"(.+)\"\n      )\n      * on(cluster, namespace, replicaset) group_left(owner_kind, owner_name)\n      group by (cluster, namespace, replicaset, owner_kind, owner_name) (\n        kube_replicaset_owner{job=\"kube-state-metrics\", owner_kind!=\"Deployment\", owner_kind!=\"\"}\n      )\n    , \"workload\", \"$1\", \"owner_name\", \"(.+)\")\n    OR\n    label_replace(\n      group by (cluster, namespace, pod, owner_name, owner_kind) (\n        kube_pod_owner{job=\"kube-state-metrics\", owner_kind!=\"ReplicaSet\", owner_kind!=\"DaemonSet\", owner_kind!=\"StatefulSet\", owner_kind!=\"Job\", owner_kind!=\"Node\", owner_kind!=\"\"}\n      )\n      , \"workload\", \"$1\", \"owner_name\", \"(.+)\"\n    )\n  , \"workload_type\", \"$1\", \"owner_kind\", \"(.+)\")\n)\n"
       record: namespace_workload_pod:kube_pod_owner:relabel
   - name: kube-scheduler.rules
     rules:
@@ -1491,154 +1550,15 @@ spec:
       record: cluster:node_cpu:ratio_rate5m
   - name: kubelet.rules
     rules:
-    - expr: |
-        histogram_quantile(0.99, sum(rate(kubelet_pleg_relist_duration_seconds_bucket{job="kubelet", metrics_path="/metrics"}[5m])) by (cluster, instance, le) * on(cluster, instance) group_left(node) kubelet_node_name{job="kubelet", metrics_path="/metrics"})
+    - expr: "histogram_quantile(\n  0.99, \n  sum(rate(kubelet_pleg_relist_duration_seconds_bucket{job=\"kubelet\", metrics_path=\"/metrics\"}[5m])) by (cluster, instance, le) \n  * on(cluster, instance) group_left (node) \n  max by (cluster, instance, node) (kubelet_node_name{job=\"kubelet\", metrics_path=\"/metrics\"})\n)\n"
       labels:
         quantile: "0.99"
       record: node_quantile:kubelet_pleg_relist_duration_seconds:histogram_quantile
-    - expr: |
-        histogram_quantile(0.9, sum(rate(kubelet_pleg_relist_duration_seconds_bucket{job="kubelet", metrics_path="/metrics"}[5m])) by (cluster, instance, le) * on(cluster, instance) group_left(node) kubelet_node_name{job="kubelet", metrics_path="/metrics"})
+    - expr: "histogram_quantile(\n  0.9, \n  sum(rate(kubelet_pleg_relist_duration_seconds_bucket{job=\"kubelet\", metrics_path=\"/metrics\"}[5m])) by (cluster, instance, le) \n  * on(cluster, instance) group_left (node) \n  max by (cluster, instance, node) (kubelet_node_name{job=\"kubelet\", metrics_path=\"/metrics\"})\n)\n"
       labels:
         quantile: "0.9"
       record: node_quantile:kubelet_pleg_relist_duration_seconds:histogram_quantile
-    - expr: |
-        histogram_quantile(0.5, sum(rate(kubelet_pleg_relist_duration_seconds_bucket{job="kubelet", metrics_path="/metrics"}[5m])) by (cluster, instance, le) * on(cluster, instance) group_left(node) kubelet_node_name{job="kubelet", metrics_path="/metrics"})
+    - expr: "histogram_quantile(\n  0.5, \n  sum(rate(kubelet_pleg_relist_duration_seconds_bucket{job=\"kubelet\", metrics_path=\"/metrics\"}[5m])) by (cluster, instance, le) \n  * on(cluster, instance) group_left (node) \n  max by (cluster, instance, node) (kubelet_node_name{job=\"kubelet\", metrics_path=\"/metrics\"})\n)\n"
       labels:
         quantile: "0.5"
       record: node_quantile:kubelet_pleg_relist_duration_seconds:histogram_quantile
-  - name: windows.node.rules
-    rules:
-    - expr: |
-        count by (cluster) (
-          windows_system_system_up_time{job="kubernetes-windows-exporter"}
-        )
-      record: node:windows_node:sum
-    - expr: |
-        count by (cluster, instance) (sum by (cluster, instance, core) (
-          windows_cpu_time_total{job="kubernetes-windows-exporter"}
-        ))
-      record: node:windows_node_num_cpu:sum
-    - expr: |
-        1 - avg by (cluster) (rate(windows_cpu_time_total{job="kubernetes-windows-exporter",mode="idle"}[1m]))
-      record: :windows_node_cpu_utilisation:avg1m
-    - expr: |
-        1 - avg by (cluster, instance) (
-          rate(windows_cpu_time_total{job="kubernetes-windows-exporter",mode="idle"}[1m])
-        )
-      record: node:windows_node_cpu_utilisation:avg1m
-    - expr: |
-        1 -
-        sum by (cluster) (windows_memory_available_bytes{job="kubernetes-windows-exporter"})
-        /
-        sum by (cluster) (windows_os_visible_memory_bytes{job="kubernetes-windows-exporter"})
-      record: ':windows_node_memory_utilisation:'
-    - expr: |
-        sum by (cluster) (windows_memory_available_bytes{job="kubernetes-windows-exporter"} + windows_memory_cache_bytes{job="kubernetes-windows-exporter"})
-      record: :windows_node_memory_MemFreeCached_bytes:sum
-    - expr: |
-        (windows_memory_cache_bytes{job="kubernetes-windows-exporter"} + windows_memory_modified_page_list_bytes{job="kubernetes-windows-exporter"} + windows_memory_standby_cache_core_bytes{job="kubernetes-windows-exporter"} + windows_memory_standby_cache_normal_priority_bytes{job="kubernetes-windows-exporter"} + windows_memory_standby_cache_reserve_bytes{job="kubernetes-windows-exporter"})
-      record: node:windows_node_memory_totalCached_bytes:sum
-    - expr: |
-        sum by (cluster) (windows_os_visible_memory_bytes{job="kubernetes-windows-exporter"})
-      record: :windows_node_memory_MemTotal_bytes:sum
-    - expr: |
-        sum by (cluster, instance) (
-          (windows_memory_available_bytes{job="kubernetes-windows-exporter"})
-        )
-      record: node:windows_node_memory_bytes_available:sum
-    - expr: |
-        sum by (cluster, instance) (
-          windows_os_visible_memory_bytes{job="kubernetes-windows-exporter"}
-        )
-      record: node:windows_node_memory_bytes_total:sum
-    - expr: |
-        (node:windows_node_memory_bytes_total:sum - node:windows_node_memory_bytes_available:sum)
-        /
-        scalar(sum(node:windows_node_memory_bytes_total:sum))
-      record: node:windows_node_memory_utilisation:ratio
-    - expr: |
-        1 - (node:windows_node_memory_bytes_available:sum / node:windows_node_memory_bytes_total:sum)
-      record: 'node:windows_node_memory_utilisation:'
-    - expr: |
-        irate(windows_memory_swap_page_operations_total{job="kubernetes-windows-exporter"}[5m])
-      record: node:windows_node_memory_swap_io_pages:irate
-    - expr: |
-        avg by (cluster) (irate(windows_logical_disk_read_seconds_total{job="kubernetes-windows-exporter"}[1m]) +
-            irate(windows_logical_disk_write_seconds_total{job="kubernetes-windows-exporter"}[1m])
-          )
-      record: :windows_node_disk_utilisation:avg_irate
-    - expr: |
-        avg by (cluster, instance) (
-          (irate(windows_logical_disk_read_seconds_total{job="kubernetes-windows-exporter"}[1m]) +
-           irate(windows_logical_disk_write_seconds_total{job="kubernetes-windows-exporter"}[1m]))
-        )
-      record: node:windows_node_disk_utilisation:avg_irate
-    - expr: |
-        max by (cluster,instance,volume)(
-          (windows_logical_disk_size_bytes{job="kubernetes-windows-exporter"}
-        - windows_logical_disk_free_bytes{job="kubernetes-windows-exporter"})
-        / windows_logical_disk_size_bytes{job="kubernetes-windows-exporter"}
-        )
-      record: 'node:windows_node_filesystem_usage:'
-    - expr: |
-        max by (cluster, instance, volume) (windows_logical_disk_free_bytes{job="kubernetes-windows-exporter"} / windows_logical_disk_size_bytes{job="kubernetes-windows-exporter"})
-      record: 'node:windows_node_filesystem_avail:'
-    - expr: |
-        sum by (cluster) (irate(windows_net_bytes_total{job="kubernetes-windows-exporter"}[1m]))
-      record: :windows_node_net_utilisation:sum_irate
-    - expr: |
-        sum by (cluster, instance) (
-          (irate(windows_net_bytes_total{job="kubernetes-windows-exporter"}[1m]))
-        )
-      record: node:windows_node_net_utilisation:sum_irate
-    - expr: |
-        sum by (cluster) (irate(windows_net_packets_received_discarded_total{job="kubernetes-windows-exporter"}[1m])) +
-        sum by (cluster) (irate(windows_net_packets_outbound_discarded_total{job="kubernetes-windows-exporter"}[1m]))
-      record: :windows_node_net_saturation:sum_irate
-    - expr: |
-        sum by (cluster, instance) (
-          (irate(windows_net_packets_received_discarded_total{job="kubernetes-windows-exporter"}[1m]) +
-          irate(windows_net_packets_outbound_discarded_total{job="kubernetes-windows-exporter"}[1m]))
-        )
-      record: node:windows_node_net_saturation:sum_irate
-  - name: windows.pod.rules
-    rules:
-    - expr: |
-        windows_container_available{job="kubernetes-windows-exporter", container_id != ""} * on(container_id, cluster) group_left(container, pod, namespace) max(kube_pod_container_info{job="kube-state-metrics", container_id != ""}) by(container, container_id, pod, namespace, cluster)
-      record: windows_pod_container_available
-    - expr: |
-        windows_container_cpu_usage_seconds_total{job="kubernetes-windows-exporter", container_id != ""} * on(container_id, cluster) group_left(container, pod, namespace) max(kube_pod_container_info{job="kube-state-metrics", container_id != ""}) by(container, container_id, pod, namespace, cluster)
-      record: windows_container_total_runtime
-    - expr: |
-        windows_container_memory_usage_commit_bytes{job="kubernetes-windows-exporter", container_id != ""} * on(container_id, cluster) group_left(container, pod, namespace) max(kube_pod_container_info{job="kube-state-metrics", container_id != ""}) by(container, container_id, pod, namespace, cluster)
-      record: windows_container_memory_usage
-    - expr: |
-        windows_container_memory_usage_private_working_set_bytes{job="kubernetes-windows-exporter", container_id != ""} * on(container_id, cluster) group_left(container, pod, namespace) max(kube_pod_container_info{job="kube-state-metrics", container_id != ""}) by(container, container_id, pod, namespace, cluster)
-      record: windows_container_private_working_set_usage
-    - expr: |
-        windows_container_network_receive_bytes_total{job="kubernetes-windows-exporter", container_id != ""} * on(container_id, cluster) group_left(container, pod, namespace) max(kube_pod_container_info{job="kube-state-metrics", container_id != ""}) by(container, container_id, pod, namespace, cluster)
-      record: windows_container_network_received_bytes_total
-    - expr: |
-        windows_container_network_transmit_bytes_total{job="kubernetes-windows-exporter", container_id != ""} * on(container_id, cluster) group_left(container, pod, namespace) max(kube_pod_container_info{job="kube-state-metrics", container_id != ""}) by(container, container_id, pod, namespace, cluster)
-      record: windows_container_network_transmitted_bytes_total
-    - expr: |
-        max by (cluster, namespace, pod, container) (
-          kube_pod_container_resource_requests{resource="memory",job="kube-state-metrics"}
-        ) * on(container,pod,namespace,cluster) (windows_pod_container_available)
-      record: kube_pod_windows_container_resource_memory_request
-    - expr: |
-        kube_pod_container_resource_limits{resource="memory",job="kube-state-metrics"} * on(container,pod,namespace,cluster) (windows_pod_container_available)
-      record: kube_pod_windows_container_resource_memory_limit
-    - expr: |
-        max by (cluster, namespace, pod, container) (
-          kube_pod_container_resource_requests{resource="cpu",job="kube-state-metrics"}
-        ) * on(container,pod,namespace,cluster) (windows_pod_container_available)
-      record: kube_pod_windows_container_resource_cpu_cores_request
-    - expr: |
-        kube_pod_container_resource_limits{resource="cpu",job="kube-state-metrics"} * on(container,pod,namespace,cluster) (windows_pod_container_available)
-      record: kube_pod_windows_container_resource_cpu_cores_limit
-    - expr: |
-        sum by (cluster, namespace, pod, container) (
-          rate(windows_container_total_runtime{}[5m])
-        )
-      record: namespace_pod_container:windows_container_cpu_usage_seconds_total:sum_rate
