fix: Fix promtail duplicated job_name

--- a/apps/base/logging-promtail/deploy/config/promtail.yaml
+++ b/apps/base/logging-promtail/deploy/config/promtail.yaml
@@ -112,7 +112,7 @@ scrape_configs:
               - host_filename
 
         
-  - job_name: system
+  - job_name: nginx
     static_configs:
     - targets:
       - localhost
