fix: Fix ntfy-alertmanager health check

--- a/apps/base/infra-ntfy/deploy/ntfy-alertmanager/deployment.yaml
+++ b/apps/base/infra-ntfy/deploy/ntfy-alertmanager/deployment.yaml
@@ -42,7 +42,7 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: /
+            path: /health
             port: http
           initialDelaySeconds: 3
           periodSeconds: 5
