--- a/apps/base/cluster-multus/deploy/multus-daemonset-thick.yaml
+++ b/apps/base/cluster-multus/deploy/multus-daemonset-thick.yaml
@@ -192,8 +192,6 @@ spec:
             - name: hostroot
               mountPath: /hostroot
               mountPropagation: HostToContainer
-            - mountPath: /etc/cni/multus/net.d
-              name: multus-conf-dir
           env:
             - name: MULTUS_NODE_NAME
               valueFrom:
@@ -203,9 +201,9 @@ spec:
         - name: install-multus-binary
           image: ghcr.io/k8snetworkplumbingwg/multus-cni:snapshot-thick
           command:
-            - "sh"
-            - "-c"
-            - "cp /usr/src/multus-cni/bin/multus-shim /host/opt/cni/bin/multus-shim && cp /usr/src/multus-cni/bin/passthru /host/opt/cni/bin/passthru"
+            - "cp"
+            - "/usr/src/multus-cni/bin/multus-shim"
+            - "/host/opt/cni/bin/multus-shim"
           resources:
             requests:
               cpu: "10m"
@@ -249,6 +247,3 @@ spec:
         - name: host-run-netns
           hostPath:
             path: /run/netns/
-        - name: multus-conf-dir
-          hostPath:
-            path: /etc/cni/multus/net.d
