fix: Add adm group to crowdsec to fix log read permission issues

--- a/apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
+++ b/apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
@@ -25,6 +25,8 @@ spec:
         #fsGroupChangePolicy: "OnRootMismatch"
         seccompProfile:
           type: RuntimeDefault
+        supplementalGroups:
+          - 4 # adm group, allows reading host logs
       initContainers:
       - name: wait-for-requirements
         image: "registry.lan/crowdsec-busybox:1.37.0"
