--- a/ansible/install_infra/roles/kubernetes_node_preinstall/tasks/from_apt.yml
+++ b/ansible/install_infra/roles/kubernetes_node_preinstall/tasks/from_apt.yml
@@ -1,15 +1,11 @@
 ---
-
-- name: Add Kubenetes repo key
-  ansible.builtin.get_url:
-    url: https://pkgs.k8s.io/core:/stable:/{{ kubernetes_repo_version }}/deb/Release.key
-    dest: /etc/apt/keyrings/kubernetes-apt-keyring.asc
-
 - name: Add Kubernetes repo
-  ansible.builtin.apt_repository:
-    filename: "kubernetes"
-    repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.asc] https://pkgs.k8s.io/core:/stable:/{{ kubernetes_repo_version }}/deb/ /"
-    state: present
+  ansible.builtin.deb822_repository:
+    name: kubernetes
+    types: deb
+    uris: https://pkgs.k8s.io/core:/stable:/{{ kubernetes_repo_version }}/deb/
+    suites: /
+    signed_by: https://pkgs.k8s.io/core:/stable:/{{ kubernetes_repo_version }}/deb/Release.key
 
 - name: Pin Kubernetes version
   ansible.builtin.template:
